# RemoteFinger

./: .gitignore  README.md  ReadMe.txt
ArduinoOldProjects/Prezent_2018/: opis_projektu.txt
ArduinoOldProjects/Prezent_2019/: Opis_projektu.txt
ArduinoOldProjects/Przycisk_pojemnosciowy/: Opis_projektu.txt
ArduinoOldProjects/Robot_sprzatajacy/: Opis_projektu.txt  kod.txt
ArduinoOldProjects/System_monitorujacy_prace_serca/: Cel_i_zakres_pracy.txt  kod_atmega328p.txt
AutomaticGate/: AutomaticGate.ino  Opis_projektu.txt
HelpingHand_project/: KN_BEAN_Helping_Hand.pptx
Induction_Heater/: Induction_Heater.docx  circuitFALSTAD.txt
Miernik_pradu_AC/: kod.txt
Miernik_temperatura_wilgotnosc/: Opis_projektu.txt  kod.txt
Prezent_2018/: kod.txt
Prezent_2019/: Opis_projektu.txt  kod.txt
Przycisk_pojemnosciowy/: Opis_projektu.txt  kod.txt
RaspberryPi_Projects/RaspberryPico/: ReadMe.txt
RaspberryPi_Projects/RaspberryPico/CleanBlinkyTemplate_FreeRTOS/Application/: Flash_OpenOCD.sh  FreeRTOS_Kernel_import.cmake  README.md
RaspberryPi_Projects/RaspberryPico/CleanBlinkyTemplate_FreeRTOS/Application/Standard/: CMakeLists.txt  blinky_main.c  main.c
RaspberryPi_Projects/RaspberryPico/ElectronicBlinds/: ElectronicBlinds_PicturesAndVideos.txt
RaspberryPi_Projects/RaspberryPico/ElectronicBlinds/CircuitSchematics/: CircuitBoard_TestReport.txt  H-bridge_circuit_FALSTAD_EXPORT.txt  PlaceholderForEither_H_BRIDGE_or_RELAY_CONTROL_schematic.txt  PlaceholderForRealCircuitPic.txt
RaspberryPi_Projects/RaspberryPico/ElectronicBlinds/Hardware/3D_Models/: MotorHolder v4.f3d  N20_BT09_ShaftAdapter v6.f3d
RaspberryPi_Projects/RaspberryPico/ElectronicBlinds/Software/Application/: CMakeLists.txt  Flash_OpenOCD.sh
RaspberryPi_Projects/RaspberryPico/ElectronicBlinds/Software/Application/Standard/: CMakeLists.txt  ElectronicBlinds_Main.c  main.c
RaspberryPi_Projects/RaspberryPico/FreeRTOS_BlinkyDemo/Application/: Build.sh  Flash_OpenOCD.sh
RaspberryPi_Projects/RaspberryPico/FreeRTOS_BlinkyDemo/Application/Standard/: CMakeLists.txt  main_blinky.c
RaspberryPi_Projects/RaspberryPico/FreeRTOS_BlinkyDemo/CORTEX_M0+_RP2040/Standard/: CMakeLists.txt
RaspberryPi_Projects/RaspberryPico/RemoteFinger/Application/: Build.sh  CMakeLists.txt  Flash_OpenOCD.sh  pico_sdk_import.cmake
RaspberryPi_Projects/RaspberryPico/RemoteFinger/Application/Standard/: CMakeLists.txt  RemoteFinger_main.c  main.c  main_blinky.c
RaspberryPi_Projects/RaspberryPico/RemoteFinger/Hardware/: placeholder.txt
RaspberryPi_Projects/RaspberryPico/RemoteFinger/Software/Application/: Build.sh
RaspberryPi_Projects/RaspberryPico/RemoteFinger/Software/Application/Standard/: RemoteFinger_main.c  main.c
Robot_sprzatajacy-IN_PROGRESS/: Opis_projektu.txt  kod.txt  vacuum.cpp  vacuum.h
Software/Application/: Build.sh  CMakeLists.txt  Flash_OpenOCD.sh  README.md  pico_sdk_import.cmake
Software/Application/BluetoothReceiverApp/: BT_Receive.py
Software/Application/Standard/: CMakeLists.txt  RemoteFinger_main.c  main.c
Software/Application/SwComponents/: CMakeLists.txt
Software/Application/SwComponents/Include/: RemoteFinger_main.h
Software/Application/SwComponents/Source/: BluetoothProfileConfig.cfg  RemoteFinger_main.c  main.c  server_common.c  temp_sensor.gatt
System_monitorujacy_prace_serca/: Cel_i_zakres_pracy.txt
